--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
